Correcoes no cadastro da maquina

--- a/app/views/cadastro_maquina.html
+++ b/app/views/cadastro_maquina.html
@@ -5,13 +5,13 @@
 		
 		<!-- MAQUINA -->
 		<div class="form-group">
-			<label class="col-md-2 control-label" for="modelo">Modelo:</label>
+			<label class="col-md-2 control-label" for="modelo">Modelo*:</label>
 			<div class="col-md-6">
 				<input id="modelo" ng-model="maquina.modelo" required class="form-control input-md" type="text" placeholder="modelo da máquina" name="modelo"></input>
 			</div>
 		</div>
 		<div class="form-group">
-			<label class="col-md-2 control-label" for="modelo">NºGarantia:</label>
+			<label class="col-md-2 control-label" for="modelo">NºGarantia*:</label>
 			<div class="col-md-6">
 				<input id="nuGarantia" ng-model="maquina.nuGarantia" required class="form-control input-md" type="text" placeholder="Número de garantia" name="nuGarantia"></input>
 			</div>
