--- a/app/views/historico_form.html
+++ b/app/views/historico_form.html
@@ -36,7 +36,7 @@
 <div class="form-group">
 	<label class="col-md-2 control-label" for="itemHistoricoNovo.problemaTecnico">Relatado Pelo técnico:</label>
 	<div class="col-md-7">
-		<input id="itemHistoricoNovo.problemaTecnico" maxlength="4" class="form-control input-md" type="text" placeholder="Cliente"  ng-model="itemHistoricoNovo.problemaTecnico" name="itemHistoricoNovo.problemaTecnico"></input>
+		<input id="itemHistoricoNovo.problemaTecnico" class="form-control input-md" type="text" placeholder="Cliente"  ng-model="itemHistoricoNovo.problemaTecnico" name="itemHistoricoNovo.problemaTecnico"></input>
 	</div>
 </div>
 <button type="button" ng-class="{'disabled' : formHistoricoTemErro(maquinaForm) }" ng-disabled="formHistoricoTemErro(maquinaForm)" class="btn btn-primary" ng-click="adicionarItemHistorico(itemHistoricoNovo);itemHistoricoNovo = null;">Adicionar</button>
